<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92"
        />

    <TextView
        android:id="@+id/text_sMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        android:text="@string/sMarket"
        android:textSize="32sp"
        android:fontFamily="@font/notosanskr_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        android:text="@string/Login"
        android:textSize="32sp"
        android:fontFamily="@font/notosanskr_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        />

    <View
        android:id="@+id/view_id"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        app:layout_constraintWidth_percent="0.82"/>

    <View
        android:id="@+id/view_pw"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        app:layout_constraintWidth_percent="0.82"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login"
        android:fontFamily="@font/notosanskr_medium"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.074"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        app:layout_constraintWidth_percent="0.82" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79"
        app:layout_constraintWidth_percent="0.33"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791"
        app:layout_constraintWidth_percent="0.33"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.398"
        app:layout_constraintHeight_percent="0.0525"
        android:background="@drawable/login_naver"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.875"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_bold"
        android:text="@string/Or"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/view2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/btn_singup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="@font/notosanskr_bold"
        android:text="@string/sign_up"
        android:textColor="@color/main_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <TextView
        android:id="@+id/text_id"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintBottom_toTopOf="@id/view_id"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        android:text="@string/id"
        android:fontFamily="@font/notosanskr_medium"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-14dp"
        />

    <ImageView
        android:id="@+id/image_pw"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pw"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintBottom_toTopOf="@id/view_pw"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="4dp"
        />

    <EditText
        android:id="@+id/edit_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/text_id"
        app:layout_constraintBottom_toTopOf="@id/view_id"
        app:layout_constraintStart_toEndOf="@id/text_id"
        app:layout_constraintEnd_toEndOf="@id/view_id"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:gravity="end|bottom"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edit_pw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/image_pw"
        app:layout_constraintBottom_toTopOf="@id/view_pw"
        app:layout_constraintStart_toEndOf="@id/image_pw"
        app:layout_constraintEnd_toEndOf="@id/view_pw"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:gravity="end"
        android:inputType="textPassword"
        />





</androidx.constraintlayout.widget.ConstraintLayout>