<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".edit.EditActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.36"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bottom_border"
        >

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@null"
            android:text="@string/exit"
            android:textSize="16sp"
            android:fontFamily="@font/notosanskr_regular"
            />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/notosanskr_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="sMarket 글쓰기"
            />


        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@null"
            android:text="@string/complete"
            android:textSize="16sp"
            android:fontFamily="@font/notosanskr_regular"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 이미지 입력-->

    <Button
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="@id/view_image"
        android:textColor="@color/light_gray"
        android:background="@drawable/image_button"
        android:text="0 / 10"
        android:fontFamily="@font/notosanskr_light"
        android:textSize="10sp"
        android:gravity="bottom|center_horizontal"
        android:layout_marginStart="15dp"
        />

    <View
        android:id="@+id/view_image"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/border"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        android:layout_marginTop="87dp"
        />

    <Spinner
        android:id="@+id/category_list"
        android:layout_width="0dp"
        android:layout_height="87dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/view_image"
        android:padding="12dp"
        />

    <!-- 제목 입력-->

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_image"
        app:layout_constraintBottom_toBottomOf="@id/view_title"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        android:textColor="@color/light_gray"
        android:text="@string/edit_title"
        android:fontFamily="@font/notosanskr_light"
        android:textSize="18sp"
        android:gravity="start"
        android:layout_marginStart="15dp"
        />


    <View
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/border"
        app:layout_constraintTop_toBottomOf="@id/view_image"
        android:layout_marginTop="71dp"
        />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@id/view_image"
        app:layout_constraintBottom_toBottomOf="@id/view_title"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:fontFamily="@font/notosanskr_light"
        android:textSize="18sp"
        android:gravity="start"
        android:padding="12dp"
        android:maxLines="1"
        android:maxLength="18"
        />



    <!--가격 입력란-->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_title"
        app:layout_constraintBottom_toBottomOf="@id/view_price"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        android:textColor="@color/light_gray"
        android:text="@string/input_price"
        android:fontFamily="@font/notosanskr_light"
        android:textSize="18sp"
        android:gravity="start"
        android:layout_marginStart="15dp"
        />


    <View
        android:id="@+id/view_price"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/border"
        app:layout_constraintTop_toBottomOf="@id/view_title"
        android:layout_marginTop="71dp"
        />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@id/view_title"
        app:layout_constraintBottom_toBottomOf="@id/view_price"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:fontFamily="@font/notosanskr_light"
        android:textSize="18sp"
        android:gravity="start"
        android:padding="12dp"
        android:maxLines="1"
        android:maxLength="9"
        android:inputType="number"
        />



    <!--본문 내용-->

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/view_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:gravity="top|left"
        android:hint="sMarket에 올릴 자신의 능력을 올려주세요! (거짓된 능력은 게시가 젠한될 수 있어요.)"
        android:paddingVertical="12dp"
        android:paddingHorizontal="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>