<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignupActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92"
        />

    <TextView
        android:id="@+id/text_sMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        android:text="@string/sMarket"
        android:textSize="32sp"
        android:fontFamily="@font/notosanskr_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        android:text="@string/signup"
        android:textSize="32sp"
        android:fontFamily="@font/notosanskr_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        />

    <View
        android:id="@+id/view_id"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4625"
        app:layout_constraintWidth_percent="0.82"/>

    <View
        android:id="@+id/view_pw"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558"
        app:layout_constraintWidth_percent="0.82"/>

    <View
        android:id="@+id/view_email"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653"
        app:layout_constraintWidth_percent="0.82"/>

    <View
        android:id="@+id/view_nickname"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747"
        app:layout_constraintWidth_percent="0.82"/>

    <TextView
        android:id="@+id/text_id"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintBottom_toTopOf="@id/view_id"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        android:text="@string/id"
        android:fontFamily="@font/notosanskr_medium"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-14dp"
        />

    <ImageView
        android:id="@+id/image_pw"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pw"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintBottom_toTopOf="@id/view_pw"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="4dp"
        />

    <ImageView
        android:id="@+id/image_email"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pw"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintBottom_toTopOf="@id/view_email"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="4dp"
        />

    <TextView
        android:id="@+id/text_nickname"
        android:layout_width="39dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintBottom_toTopOf="@id/view_nickname"
        android:textSize="14sp"
        android:layout_marginBottom="-8dp"
        android:textColor="@color/dark_gray"
        android:text="@string/nickname"
        android:fontFamily="@font/notosanskr_medium"
        />


    <EditText
        android:id="@+id/edit_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/text_id"
        app:layout_constraintBottom_toTopOf="@id/view_id"
        app:layout_constraintStart_toEndOf="@id/text_id"
        app:layout_constraintEnd_toStartOf="@id/btn_redundancy"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:gravity="end|bottom"
        android:inputType="text"
        android:hint="아이디 입력"
        />

    <EditText
        android:id="@+id/edit_pw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/image_pw"
        app:layout_constraintBottom_toTopOf="@id/view_pw"
        app:layout_constraintStart_toEndOf="@id/image_pw"
        app:layout_constraintEnd_toEndOf="@id/view_pw"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:gravity="end"
        android:inputType="textPassword"
        android:hint="비밀번호 입력"
        />

    <EditText
        android:id="@+id/edit_pw_check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/image_email"
        app:layout_constraintBottom_toTopOf="@id/view_email"
        app:layout_constraintStart_toEndOf="@id/image_email"
        app:layout_constraintEnd_toEndOf="@id/view_email"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:gravity="end"
        android:inputType="textPassword"
        android:hint="비밀번호 확인"
        />


    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/text_nickname"
        app:layout_constraintBottom_toTopOf="@id/view_nickname"
        app:layout_constraintStart_toEndOf="@id/text_nickname"
        app:layout_constraintEnd_toEndOf="@id/view_nickname"
        android:layout_marginEnd="4dp"
        android:background="@null"
        android:gravity="end|bottom"
        android:inputType="text"
        android:hint="닉네임 입력"
        />

    <Button
        android:id="@+id/btn_redundancy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.181"
        app:layout_constraintHeight_percent="0.038"
        app:layout_constraintEnd_toEndOf="@id/view_id"
        app:layout_constraintBottom_toTopOf="@id/view_id"
        android:background="@drawable/redundancy"
        android:text="@string/redundancy"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginBottom="2dp"
        />

    <TextView
        android:id="@+id/check_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/view_id"
        app:layout_constraintStart_toStartOf="@id/view_id"
        android:text="영문과 숫자가 섞인 5~12자를 입력해주세요."
        android:layout_margin="2dp"
        android:textColor="#FF0000"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/check_pw_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/view_pw"
        app:layout_constraintStart_toStartOf="@id/view_pw"
        android:text="영문과 숫자가 섞인 8~15자를 입력해주세요."
        android:layout_margin="2dp"
        android:textColor="#FF0000"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/check_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/view_email"
        app:layout_constraintStart_toStartOf="@id/view_email"
        android:text="비밀번호가 일치하지 않습니다."
        android:layout_margin="2dp"
        android:textColor="#FF0000"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btn_singup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login"
        android:fontFamily="@font/notosanskr_medium"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.074"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911"
        app:layout_constraintWidth_percent="0.82" />

</androidx.constraintlayout.widget.ConstraintLayout>